# redpaper

./: README.md  redpaper_host.docker
eisvogel/: eisvogel-template.tex
examples/: .gitignore  cpp_ds_reference.md  cpp_parallel_atomics.md  crypto_showcase.md  cs_cooking.md  doc1.md  latex_to_typst.md  typst_test_2.md
filters/: code_includes.lua  latex_fontsize.py  standard_code.lua  transclude.lua
fonts/AdobeJensonPro/: demo.html  stylesheet.css
fonts/AusteraText/: demo.html  stylesheet.css
fonts/BasisGrotesqueMonoPro/: demo.html  stylesheet.css
fonts/Monograf/: demo.html  stylesheet.css
fonts/NativeMono/: demo.html  stylesheet.css
fonts/PalatinoNova/: demo.html  stylesheet.css
fonts/QueueMono/: demo.html  stylesheet.css
redpaper_craft/: README.md  pyproject.toml
redpaper_craft/redpaper_craft/: __init__.py  cli.py
resources/: font_cache.tex  install_font.sh  install_package.sh
templates/classic/: classic-template.tex
templates/imtext/: article.typ
templates/latex/style2/: core.tex  style2-double.tex
templates/style2/: common.tex  core.tex  style2-base.typ  style2-double.tex  style2-single.tex  style2-single.typ  style2-template.tex  style2.typ
templates/tufte/: tufte-thing1.typ  tufte-thing2.typ
tufte/: tufte-handout-template.tex
